added h1 tag insted of div

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <img class="qr-img" src="./images/image-qr-code.png" alt="image">
     </div>
     <div class="message">
-      <div class="heading">Improve your front-end skills by building projects</div>
+      <h1 class="heading">Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit this Frontend Mentor and take your coding skills to the next level</p>
   </div>
  
